Change content images and readjust their alignments

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button type="button">Sign up</button>
             </div>
-            <img src="./01.png" alt="this is a placeholder for an image">
+            <img src="./images/clovers.jpg" alt="this is a placeholder for an image">
         </div>
         <div class="content-two">
             <h2>Some random information.</h2>
             <div class="img-container">
-                <img src="./02.png">
+                <img src="./images/squirrel.jpg">
                 <p>this is some subtext under an illustration or image</p>
-                <img src="./02.png">
+                <img src="./images/squirrel.jpg">
                 <p>this is some subtext under an illustration or image</p>
-                <img src="./02.png">
+                <img src="./images/squirrel.jpg">
                 <p>this is some subtext under an illustration or image</p>
-                <img src="./02.png">
+                <img src="./images/squirrel.jpg">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
