--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
         <div class="content-two">
             <h2>Some random information.</h2>
             <div class="img-container">
-                <img src="./images/squirrel.jpg">
-                <p>this is some subtext under an illustration or image</p>
-                <img src="./images/squirrel.jpg">
-                <p>this is some subtext under an illustration or image</p>
-                <img src="./images/squirrel.jpg">
-                <p>this is some subtext under an illustration or image</p>
-                <img src="./images/squirrel.jpg">
-                <p>this is some subtext under an illustration or image</p>
+                <div class="info">
+                    <img src="./images/squirrel.jpg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img src="./images/squirrel.jpg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img src="./images/squirrel.jpg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info">
+                    <img src="./images/squirrel.jpg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
         </div>
         <div class="content-three">
