Style content-four

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             <p class="quotee">-Thor, God of Thunder</p>
         </div>
         <div class="content-four">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div>
+                <p class="bold-p">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
             <button type="button">Sign up</button>
         </div>
         <div class="footer">
